# chimerair

./: .gitignore  README.md  build.sh  test.sh  toolchain.toml
ChimeraProof/: RustAdapter.lean  (+3 more)
compiler-core/: CMakeLists.txt  README.md
compiler-core/cmake/: ChimeraCoreConfig.cmake
compiler-core/include/chimera-c/: ChimeraCAPI.h
compiler-core/include/chimera/Benchmark/: Benchmark.h
compiler-core/include/chimera/Fuzz/: FuzzTargets.h
compiler-core/include/chimera/IR/: Diagnostics.h  Dialect.h  Ops.td  Types.h
compiler-core/include/chimera/Lowering/: LLVMLowering.h
compiler-core/include/chimera/Passes/: Passes.h  Verification.h
compiler-core/include/chimera/Proof/: ProofBridge.h
compiler-core/lib/: CCAPI.cpp  CMakeLists.txt
compiler-core/lib/Benchmark/: Benchmark.cpp  CMakeLists.txt
compiler-core/lib/Dialect/: CMakeLists.txt  Diagnostics.cpp  Dialect.cpp  Types.cpp
compiler-core/lib/Lowering/: CMakeLists.txt  LLVMConversion.cpp
compiler-core/lib/Passes/: ABILayout.cpp  CMakeLists.txt  EffectTracking.cpp  Ownership.cpp  PanicBoundary.cpp  Passes.cpp  ResultLowering.cpp  Verification.cpp
compiler-core/lib/Proof/: CMakeLists.txt  ProofBridge.cpp
compiler-core/test/: CMakeLists.txt  README.md  c-api.test  driver_smoke.mlir  lit.cfg.py.in  verify_lowering.cmake  verify_sidecars.cmake
compiler-core/test/Dialect/Chimera/: driver.test  parsing.test  zig-ffi-safe.mlir
compiler-core/test/Dialect/Lowering/: llvm-lowering.mlir
compiler-core/test/Passes/: pipeline.test
compiler-core/tools/benchmark/: BenchmarkSmoke.cpp  CMakeLists.txt
compiler-core/tools/driver/: CMakeLists.txt  driver.cpp
compiler-core/tools/fuzz/: CMakeLists.txt  FuzzSmoke.cpp  FuzzTargets.cpp
compiler-core/tools/pass-smoke/: CMakeLists.txt  PassSmoke.cpp
compiler-core/unittests/: CMakeLists.txt  TypesTest.cpp  VerifierTest.cpp
runtime/rust/: Cargo.toml
runtime/rust/src/: lib.rs
tools/: Cargo.toml  README.md
tools/crates/chimera-adapter-c/: Cargo.toml
tools/crates/chimera-adapter-c/src/: artifact.rs  contract.rs  lib.rs
tools/crates/chimera-adapter-rust/: Cargo.toml
tools/crates/chimera-adapter-rust/fixtures/: negative_result_crosses_ffi.rs  negative_vec_crosses_ffi.rs
tools/crates/chimera-adapter-rust/src/: lib.rs
tools/crates/chimera-adapter-zig/: Cargo.toml
tools/crates/chimera-adapter-zig/fixtures/: negative_slice_crosses_ffi.zig  test_snapshot_v1.json
tools/crates/chimera-adapter-zig/src/: artifact.rs  authority.rs  context.rs  detection.rs  lib.rs
tools/crates/chimera-artifact/: Cargo.toml
tools/crates/chimera-artifact/src/: lib.rs
tools/crates/chimera-beam-abi/: Cargo.toml
tools/crates/chimera-beam-abi/src/: calling_conv.rs  decode.rs  encode.rs  lib.rs  message.rs
tools/crates/chimera-beam-ast/: Cargo.toml
tools/crates/chimera-beam-ast/src/: ast.rs  core_erlang.rs  lib.rs  parser.rs
tools/crates/chimera-beam-bytecode/: Cargo.toml
tools/crates/chimera-beam-bytecode/src/: analyzer.rs  disassembler.rs  lib.rs
tools/crates/chimera-beam-cache/: Cargo.toml
tools/crates/chimera-beam-cache/src/: cache.rs  entry.rs  key.rs  lib.rs
tools/crates/chimera-beam-cli/: Cargo.toml
tools/crates/chimera-beam-cli/src/: commands.rs  context.rs  lib.rs  output.rs
tools/crates/chimera-beam-dialect/: Cargo.toml
tools/crates/chimera-beam-dialect/src/: dialect.rs  lib.rs  ops.rs  types.rs
tools/crates/chimera-beam-effects/: Cargo.toml
tools/crates/chimera-beam-effects/src/: classify.rs  effect.rs  inference.rs  lib.rs
tools/crates/chimera-beam-mailbox/: .gitignore  Cargo.toml
tools/crates/chimera-beam-ownership/: Cargo.toml
tools/crates/chimera-beam-process/: Cargo.toml
tools/crates/chimera-beam-proof/: Cargo.toml
tools/crates/chimera-beam-schema/: Cargo.toml
tools/crates/chimera-beam-supervisor/: Cargo.toml
tools/crates/chimera-beam-to-actor/: Cargo.toml
tools/crates/chimera-build/: Cargo.toml
tools/crates/chimera-bun/: Cargo.toml
tools/crates/chimera-c-abi/: Cargo.toml
tools/crates/chimera-c-build/: Cargo.toml
tools/crates/chimera-c-cache/: Cargo.toml
tools/crates/chimera-c-clang/: Cargo.toml
tools/crates/chimera-c-dialect/: Cargo.toml
tools/crates/chimera-c-layout/: Cargo.toml
tools/crates/chimera-c-proof/: Cargo.toml
tools/crates/chimera-c-schema/: Cargo.toml
tools/crates/chimera-c-source/: Cargo.toml
tools/crates/chimera-c-to-chimera/: Cargo.toml
tools/crates/chimera-cache/: Cargo.toml
tools/crates/chimera-cli/: Cargo.toml
tools/crates/chimera-component/: Cargo.toml
tools/crates/chimera-diagnostics/: Cargo.toml
tools/crates/chimera-link/: Cargo.toml
tools/crates/chimera-manifest/: .gitignore  Cargo.toml
tools/crates/chimera-meta/: Cargo.toml
tools/crates/chimera-object/: Cargo.toml
tools/crates/chimera-package/: Cargo.toml
tools/crates/chimera-proof-bridge/: Cargo.toml
tools/crates/chimera-rust-abi/: Cargo.toml
tools/crates/chimera-rust-cache/: Cargo.toml
tools/crates/chimera-rust-cargo/: .gitignore  Cargo.toml
tools/crates/chimera-rust-dialect/: Cargo.toml
tools/crates/chimera-rust-effects/: Cargo.toml
tools/crates/chimera-rust-layout/: Cargo.toml
tools/crates/chimera-rust-mir-import/: Cargo.toml
tools/crates/chimera-rust-ownership/: Cargo.toml
tools/crates/chimera-rust-proof/: Cargo.toml
tools/crates/chimera-rust-schema/: Cargo.toml
tools/crates/chimera-rust-source/: Cargo.toml
tools/crates/chimera-rust-to-chimera/: Cargo.toml
tools/crates/chimera-rustc-driver/: Cargo.toml  rust-toolchain.toml
tools/crates/chimera-wrappergen/: Cargo.toml
tools/crates/chimera-zig-to-chimera/: Cargo.toml
tools/crates/zair-import/: Cargo.toml
tools/crates/zigmera-cli/: Cargo.toml
tools/crates/zigmera-diagnostics/: Cargo.toml
tools/crates/zigmera-dialect/: Cargo.toml
tools/crates/zigmera-hash/: Cargo.toml
tools/crates/zigmera-io/: Cargo.toml
tools/crates/zigmera-paths/: Cargo.toml
tools/crates/zigmera-schema/: Cargo.toml
tools/crates/zigmera-target/: Cargo.toml
tools/crates/zigmera-zig-shim/: Cargo.toml
tools/scripts/: bun-benchmark.sh  shim-validate.sh
(+606 files in other folders)
