[package]
name = "chimera-adapter-c"
version = "0.1.0"
edition = "2021"
description = "Chimera C adapter for parsing headers and validating C layouts"

[dependencies]
chimera-meta = { path = "../chimera-meta" }
chimera-diagnostics = { path = "../chimera-diagnostics" }
chimera-artifact = { path = "../chimera-artifact" }
chimera-component = { path = "../chimera-component" }
chimera-c-schema = { path = "../chimera-c-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
blake3 = "1.5"

[dev-dependencies]
tempfile = "3.8"