[package]
name = "chimera-adapter-rust"
version = "0.1.0"
edition = "2021"
description = "Chimera Rust adapter for validating repr(C), extern blocks, and FFI safety"

[dependencies]
chimera-meta = { path = "../chimera-meta" }
chimera-diagnostics = { path = "../chimera-diagnostics" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
syn = { version = "2.0", features = ["full", "derive"] }
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
tempfile = "3.8"
