[package]
name = "chimera-adapter-zig"
version = "0.1.0"
edition = "2021"
description = "Chimera Zig adapter for validating export fn, extern struct, and FFI safety"

[dependencies]
chimera-meta = { path = "../chimera-meta" }
chimera-component = { path = "../chimera-component" }
chimera-artifact = { path = "../chimera-artifact" }
chimera-diagnostics = { path = "../chimera-diagnostics" }
zigmera-schema = { path = "../zigmera-schema" }
zigmera-hash = { path = "../zigmera-hash" }
zigmera-io = { path = "../zigmera-io" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
sha2 = "0.10"
blake3 = "1.5"

[dev-dependencies]
tempfile = "3.8"
