[package]
name = "chimera-artifact"
description = "Chimera artifact envelope: LanguageBuildResult, ArtifactSet, NativeLinkSpec, PublicSurface, InvalidationReport, RuntimeDelivery"
version = "0.1.0"
edition = "2021"
license = "ISC"
rust-version = "1.85"

[features]
default = ["std"]
std = []

[dependencies]
chimera-component = { path = "../chimera-component" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"