[package]
name = "chimera-beam-cache"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chimera-beam-schema = { path = "../chimera-beam-schema" }
chimera-beam-process = { path = "../chimera-beam-process" }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
