[package]
name = "chimera-beam-mailbox"
version = "0.1.0"
edition = "2021"
description = "BEAM mailbox structure and selective receive for chimera-beam"

[dependencies]
chimera-beam-schema = { path = "../chimera-beam-schema" }
chimera-beam-process = { path = "../chimera-beam-process" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["std"]
std = []