[package]
name = "chimera-beam-process"
version = "0.1.0"
edition = "2021"
description = "BEAM process model: spawn, exit, link, monitor for chimera-beam"

[dependencies]
chimera-beam-schema = { path = "../chimera-beam-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
indexmap = "2.2"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["std"]
std = []