[package]
name = "chimera-beam-proof"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BEAM proof artifact emitter for ChimeraIR"
repository = "https://github.com/chimerair/chimerair"
categories = ["compilers", "embedded", " Beam"]
keywords = ["Beam", "Erlang", "proof", "artifact"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
 tempfile = "3.8"

[features]
default = []
validate = []