[package]
name = "chimera-beam-schema"
version = "0.1.0"
edition = "2021"
description = "Chimera Beam schema definitions for .beam_snap, .beam_dep, .beam_pack manifests"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["std"]
std = []