[package]
name = "chimera-bun"
version = "0.1.0"
edition = "2021"
description = "Bun toolchain detection and session capture for ZigMera"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zigmera-schema = { path = "../zigmera-schema" }
zigmera-hash = { path = "../zigmera-hash" }
zigmera-paths = { path = "../zigmera-paths" }
chimera-diagnostics = { path = "../chimera-diagnostics" }
blake3 = "1.5"
walkdir = "2.4"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
chimera-adapter-zig = { path = "../chimera-adapter-zig" }

[features]
default = ["std"]
std = []