[package]
name = "chimera-c-abi"
version = "0.1.0"
edition = "2021"
description = "C ABI extraction and lowering crate for functions, pointers, arrays, structs, unions, enums, varargs, and calling conventions"

[dependencies]
chimera-c-schema = { path = "../chimera-c-schema" }
zigmera-hash = { path = "../zigmera-hash" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
blake3 = "1.5"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["std"]
std = []