[package]
name = "chimera-c-build"
version = "0.1.0"
edition = "2021"
description = "C build-system ingestion crate for parse compile_commands.json, compiler flags, include paths, and linker inputs"

[dependencies]
chimera-c-schema = { path = "../chimera-c-schema" }
chimera-c-clang = { path = "../chimera-c-clang" }
zigmera-hash = { path = "../zigmera-hash" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
blake3 = "1.5"
indexmap = { version = "2.2", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["std"]
std = []